# rustcalc

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
macros/: Cargo.toml
macros/src/: lib.rs
res/: rustcalc.rc
src/: main.rs  operators.rs  tokens.rs  utils.rs
src/cli/: cli.rs  config.rs  error.rs  funcs.rs  helper.rs  main.rs  rcfile.rs  stringify.rs  utils.rs  vars.rs
src/cli/editor/: common.rs  completer.rs  finder.rs  highlighter.rs  hinter.rs  mod.rs  validator.rs
src/lib/: constants.rs  errors.rs  eval.rs  lib.rs  mod.rs  operators.rs  representable.rs  rpn.rs  tokenize.rs  tokens.rs  transform.rs  utils.rs  variables.rs  verify.rs
src/lib/model/: constants.rs  errors.rs  functions.rs  mod.rs  operators.rs  representable.rs  searchable.rs  tokens.rs  variables.rs
tests/: integration.rs
