[package]
name = "rustcalc"
version = "1.3.1"
authors = ["George-Lewis <georgejeffreylewis@gmail.com>"]
edition = "2018"
description = "A command-line utility for evaluating mathematical statements"
license = "MIT"

[lib]
name = "rustmatheval"
path = "src/lib/lib.rs"

[[bin]]
name = "rustcalc"
path = "src/cli/main.rs"

[dependencies]

# For colored terminal output
colored = "2"

# For getting standard dirs
dirs = "3.0.2"

# For random operators
rand = "0.8.3"

# For line editing
rustyline = "8.0.0"

# For fast formatting of multi-line outputs
itertools = "0.10.0"
lazy_static = "1.4.0"
