[package]
name = "rustcalc"
version = "1.5.0"
authors = ["George-Lewis <georgejeffreylewis@gmail.com>"]
edition = "2018"
description = "A command-line utility for evaluating mathematical statements"
license = "MIT"

[lib]
name = "rustmatheval"
path = "src/lib/lib.rs"

[[bin]]
name = "rustcalc"
path = "src/cli/main.rs"

[dependencies]

# For colored terminal output
colored = "2"

# For getting standard dirs
dirs = "4.0.0"

# For random numbers
rand = "0.8.3"

# For line editing, history, etc
rustyline = "9.1.2"

# For fast formatting of multi-line outputs
itertools = "0.10.0"

# Used for configuration
lazy_static = "1.4.0"

# Fast Cow
beef = "0.5.1"
